project(tomcat_docs)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake/")

find_package(Sphinx REQUIRED)

set(SPHINX_SOURCE ${CMAKE_CURRENT_SOURCE_DIR})
set(SPHINX_BUILD ${CMAKE_CURRENT_BINARY_DIR})
set(SPHINX_INDEX_FILE ${SPHINX_BUILD}/index.html)

set(OPENAPI_SPEC_YAML_FILE ${CMAKE_CURRENT_SOURCE_DIR}/spec.yml)
set(OPENAPI_SPEC_HTML_FILE ${CMAKE_CURRENT_SOURCE_DIR}/spec.html)

add_custom_command(
  OUTPUT ${OPENAPI_SPEC_HTML_FILE}
  COMMAND python ${CMAKE_CURRENT_SOURCE_DIR}/swagger-yaml-to-html.py ${OPENAPI_SPEC_YAML_FILE} ${OPENAPI_SPEC_HTML_FILE}
  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
  DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/spec.yml
  MAIN_DEPENDENCY ${CMAKE_CURRENT_SOURCE_DIR}/spec.yml
  COMMENT "Generating OpenAPI-like spec")

add_custom_command(
  OUTPUT ${SPHINX_INDEX_FILE}
  COMMAND ${SPHINX_EXECUTABLE} -b html ${SPHINX_SOURCE} ${SPHINX_BUILD}
  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
  DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/index.rst ${DOXYGEN_INDEX_FILE} ${OPENAPI_SPEC_HTML_FILE}
  MAIN_DEPENDENCY ${SPHINX_SOURCE}/conf.py
  COMMENT "Generating documentation with Sphinx")

add_custom_target(sphinx DEPENDS ${SPHINX_INDEX_FILE})
add_subdirectory(developer/java_api)
add_custom_target(docs DEPENDS sphinx java_apidocs)
