[package]
name = "tomcat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
confy = { version = "0.5.1", features = ["yaml_conf"], default-features = false}
env_logger = "0.10.0"
futures = "0.3.25"
paho-mqtt = "0.11.1"
serde = { version = "1.0.149", features = ["derive"] }
