[package]
name = "tomcat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
clap = { version = "4.0.29", features = ["derive"] }
confy = { version = "0.5.1", features = ["yaml_conf"], default-features = false}
futures = "0.3.25"
json = "0.12.4"
log = "0.4.17"
paho-mqtt = "0.11.1"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.149", features = ["derive"] }
